## Copyright (C) 2009 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
## 
## This library is free software; you can redistribute it and/or 
## modify it under the terms of the GNU Lesser General Public 
## License as published by the Free Software Foundation; either 
## version 2.1 of the License. 
## 
## This library is distributed in the hope that it will be useful, 
## but WITHOUT ANY WARRANTY; without even the implied warranty of 
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU 
## Lesser General Public License for more details. 
## 
## You should have received a copy of the GNU Lesser General Public 
## License along with this library; if not, write to the Free Software 
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA 
## 
## See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/foam2med

## ------------------------------------------------------------------------------
##
## Changes are listed by modification time in the descending order,
## i.e. newer changes are listed at the top of the file.
##
## Each record lists the modification date, author and short description of
## the made changes.
##
## ------------------------------------------------------------------------------

2009-03-15 Alexey PETROV <Alexey.Petrov@pbmr.co.za>

    * Initial developmen

2009-03-16 Alexey PETROV <Alexey.Petrov@pbmr.co.za>

    * Introduction of the README, INSTALL, LICENCE and other project
	information files
	
2009-04-07 Alexey PETROV <Alexey.Petrov@pbmr.co.za>

    * To fix a bug for OpenFOAM 1.4.1, when VTK corresponding files 
	are named into some tricky way
	
2009-04-15 Alexey PETROV <Alexey.Petrov@pbmr.co.za>

    * Introduction of 'hybrid scripting' capabilities

2010-04-04 Alexey PETROV <Alexey.Petrov@pbmr.co.za>

    * Adjusting to the "common configuration system" (confFoam package)

2011-07-11 Alexey PETROV <alexey.petrov.nnov@gmail.com>

    * Adjusting to the "changed configuration system" (confFlu package)
