@@ -1,3 +1,4 @@
+// Copyright (C) 2010- Alexey Petrov
 //  Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
 //  
 //  This program is free software: you can redistribute it and/or modify
