@@ -1,3 +1,4 @@
+## Copyright (C) 2010- Alexey Petrov
 ## Copyright (C) 2009 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
 ## 
 ## This library is free software; you can redistribute it and/or 
